[package]
name = "okc-agents"
version = "0.2.0"
authors = [
    "DDoSolitary <DDoSolitary@gmail.com>",
    "reo101 <pavel.atanasov2001@gmail.com>",
]
edition = "2021"
description = "SSH agent for a utility that makes OpenKeychain available in your Termux shell"
license = "MIT"

[dependencies]
eyre = "0.6"
base64 = "0.22.1"
clap = { version = "4.5", features = ["derive"] }
futures-util = "0.3"
lazy_static = "1.5.0"
libc = "0.2"
nix = { version = "0.30", features = ["signal"] }
slog = "2.7.0"
slog-async = "2.8.0"
slog-envlogger = "2.2.0"
slog-term = "2.9.0"
tempfile = "3.10"
tokio = { version = "1", features = ["full"] }
tokio-stream = { version = "0.1.7", features = ["net"] }

[profile.release]
lto = true
