[package]
name = "okc-agents"
version = "0.2.0"
authors = [
    "DDoSolitary <DDoSolitary@gmail.com>",
    "reo101 <pavel.atanasov2001@gmail.com>",
]
edition = "2024"
description = "SSH agent for a utility that makes OpenKeychain available in your Termux shell"
license = "MIT"

[dependencies]
eyre = "0.6"
base64 = "0.22.1"
clap = { version = "4.5", features = ["derive"] }
nix = { version = "0.31", features = ["signal"] }
tempfile = "3.10"
tokio = { version = "1", features = ["full"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "fmt"] }

[profile.release]
lto = true
